--- a/lab-0/lab0_soln.ipynb
+++ b/lab-0/lab0_soln.ipynb
@@ -390,8 +390,8 @@
       "text/plain": [
        "{'qgss-2025': {'channel': 'ibm_quantum_platform',\n",
        "  'url': 'https://cloud.ibm.com',\n",
-       "  'token': 'wXvtNo-e8qOhwvwqN-RADr4wABtJE1dfmDCw_d1aTqI4',\n",
-       "  'instance': 'crn:v1:bluemix:public:quantum-computing:us-east:a/2cadb19e2aac48d1a1a87b9c99795301:9e37e643-f42d-4d8c-91c0-8d26a474fb11::',\n",
+       "  'token': 'add api token here',\n",
+       "  'instance': 'add crn here',\n",
        "  'verify': True,\n",
        "  'private_endpoint': False}}"
       ]
