--- a/lab-0/lab0_soln.ipynb
+++ b/lab-0/lab0_soln.ipynb
@@ -365,8 +365,8 @@
    "source": [
     "# Save your API key to track your progress and have access to the quantum computers\n",
     "\n",
-    "your_api_key = \"wXvtNo-e8qOhwvwqN-RADr4wABtJE1dfmDCw_d1aTqI4\"\n",
-    "your_crn = \"crn:v1:bluemix:public:quantum-computing:us-east:a/2cadb19e2aac48d1a1a87b9c99795301:9e37e643-f42d-4d8c-91c0-8d26a474fb11::\"\n",
+    "your_api_key = \"add api token here\"\n",
+    "your_crn = \"add crn here\"\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
